--- a/RecoveryChanger_app/build.gradle
+++ b/RecoveryChanger_app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'com.eltifo.recoverychanger'
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -24,4 +24,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
 }
